@@ -7,6 +7,7 @@
 #
 # Copyright (©) 2019-2020 SNCT GmbH <info@snct-gmbh.de>
 #               2017-2020 Jörg Frings-Fürst <open_source@jff.email>
+#               2020      Danny Funkat
 #
 # LICENSE: AGPLv3
 #
@@ -33,13 +34,14 @@
 #
 # Version  / Build
 #
-$vdc_db_query_version = '3.0.1-2';
-$vdc_db_query_build = '20201105-1';
+$vdc_db_query_version = '3.0.1-3';
+$vdc_db_query_build = '20201127-1';
 #
 ###############################################################################
 #
 # Changelog
 #
+# 2020-10-27 dft	Add Pause code into AGENTSview
 # 2020-10-22 jff	Allow dial if OnlyInbounds is set
 # 2020-10-22 jff	Return [campaign|ingroup}_arc_id on VDADcheckINCOMING
 # 2020-06-10 17:10 Add $OverWriteAfterCallSurvey to allow AfterCall survey
@@ -16001,7 +16003,19 @@ if ($ACTION == 'AGENTSview')
 	### Gather agents data and statuses
 	$agentviewlistSQL='';
 	$j=0;
-	$stmt="SELECT vla.user,vla.status,vu.full_name,UNIX_TIMESTAMP(last_call_time),UNIX_TIMESTAMP(last_call_finish),UNIX_TIMESTAMP(last_state_change) from vicidial_live_agents vla,vicidial_users vu where vla.user=vu.user $AGENTviewSQL order by vu.full_name;";
+	$stmt="SELECT   vicidial_live_agents.user,
+	                vicidial_live_agents.status,
+	                vicidial_users.full_name,
+	                UNIX_TIMESTAMP(last_call_time),
+	                UNIX_TIMESTAMP(last_call_finish),
+	                UNIX_TIMESTAMP(last_state_change),
+	                IF(vicidial_live_agents.status = 'PAUSED' AND vicidial_live_agents.pause_code != 'LOGIN', vicidial_live_agents.pause_code, '-') AS pause_code
+	       FROM vicidial_live_agents
+	       INNER JOIN vicidial_users
+	           ON vicidial_live_agents.user = vicidial_users.user
+	       WHERE 1 ".$AGENTviewSQL."
+	       ORDER BY vicidial_users.full_name;
+	       ";
 	$rslt=mysql_to_mysqli($stmt, $link);
 		if ($mel > 0) {mysql_error_logging($NOW_TIME,$link,$mel,$stmt,'00227',$VD_login,$server_ip,$session_name,$one_mysql_log);}
 	if ($rslt) {$agents_count = mysqli_num_rows($rslt);}
@@ -16020,6 +16034,7 @@ if ($ACTION == 'AGENTSview')
 		$call_start =	$row[3];
 		$call_finish =	$row[4];
 		$state_change = $row[5];
+		$pause_code =   $row[6];
 		$agentviewlistSQL .= "'$user',";
 
 		if ( ($status=='READY') or ($status=='CLOSER') )
@@ -16065,11 +16080,13 @@ if ($ACTION == 'AGENTSview')
 			}
 		else
 			{
-			echo "<TR BGCOLOR=\"$statuscolor\"><TD><font style=\"font-size: 12px;  font-family: sans-serif;\"> &nbsp; ";
+			echo "<TR BGCOLOR=\"$statuscolor\"><TD style=\"font-size: 12px; font-family: sans-serif; white-space: nowrap; padding: 2px;\">";
 			echo "$row[0] - $row[2]";
-			echo "&nbsp;</font></TD>";
+			echo "</TD>";
+            if ($status == 'PAUSED') echo "<TD style=\"font-size: 12px; font-family: sans-serif; white-space: nowrap; padding: 2px;\">$pause_code</TD>";
+            else echo "<TD style=\"font-size: 12px; font-family: sans-serif; white-space: nowrap; padding: 2px;\"></TD>";
 			if ($agent_status_view_time > 0)
-				{echo "<TD><font style=\"font-size: 12px;  font-family: sans-serif;\">&nbsp; $call_time &nbsp;</font></TD>";}
+				{echo "<TD style=\"font-size: 12px; font-family: sans-serif; white-space: nowrap; padding: 2px;\">$call_time</TD>";}
 			echo "</TR>";
 			}
 		$loop_count++;
@@ -16105,6 +16122,7 @@ if ($ACTION == 'AGENTSview')
 				echo "<TR BGCOLOR=\"white\"><TD><font style=\"font-size: 12px;  font-family: sans-serif;\"> &nbsp; ";
 				echo "$user - $full_name";
 				echo "&nbsp;</font></TD>";
+                echo "<TD><font style=\"font-size: 12px;  font-family: sans-serif;\">&nbsp; $status &nbsp;</font></TD>";
 				if ($agent_status_view_time > 0)
 					{echo "<TD><font style=\"font-size: 12px;  font-family: sans-serif;\">&nbsp; 0:00 &nbsp;</font></TD>";}
 				echo "</TR>";
@@ -16137,6 +16155,7 @@ if ($ACTION == 'AGENTSview')
 			$i = $order_split[1];
 
 			echo "<TR BGCOLOR=\"$AXVSstatuscolor[$i]\"><TD><font style=\"font-size: $AXVSfontsize; font-family: sans-serif;\"> &nbsp; <a href=\"#\" onclick=\"AgentsXferSelect('$AXVSuser[$i]','AgentXferViewSelect');return false;\">$AXVSuser[$i] - $AXVSfull_name[$i]</a>&nbsp;</font></TD>";
+            echo "<TD><font style=\"font-size: 12px;  font-family: sans-serif;\">&nbsp; $status &nbsp;</font></TD>";
 			if ($agent_status_view_time > 0)
 				{echo "<TD><font style=\"font-size: $AXVSfontsize;  font-family: sans-serif;\">&nbsp; $AXVScall_time[$i] &nbsp;</font></TD>";}
 			echo "</TR>";
